Initial site edits

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ baseurl:           "/ComputerScience"
 url:               "http://cgbotta.github.io"
 
 # Social Profiles
-twitter_username:  SBootstrap
-github_username:   BlackrockDigital
+twitter_username:  colton_botta
+github_username:   cgbotta
 facebook_username: StartBootstrap
 
 # Build settings
